packages/react-components/src/components/Tag/Tag.module.scss
.tag {
  box-sizing: border-box;
  display: inline-flex;
  position: relative;
  align-items: center;
  border-radius: var(--radius-3);
  border-color: var(--border-basic-primary);
  background-color: var(--surface-tertiary-default);
  overflow: hidden;
  color: var(--content-basic-primary);

  &--success {
    border-color: var(--border-basic-positive);
    background-color: var(--surface-accent-emphasis-low-positive);
    color: var(--content-basic-positive);

    .tag__remove {
      color: var(--content-basic-positive);
    }
  }

  &--error {
    border-color: var(--border-basic-negative);
    background-color: var(--surface-accent-emphasis-low-negative);
    color: var(--content-basic-negative);

    .tag__remove {
      color: var(--content-basic-negative);
    }
  }

  &--warning {
    border-color: var(--border-basic-warning);
    background-color: var(--surface-accent-emphasis-low-warning);
    color: var(--content-basic-warning);

    .tag__remove {
      color: var(--content-basic-warning);
    }
  }

  &--info {
    border-color: var(--border-basic-info);
    background-color: var(--surface-accent-emphasis-low-info);
    color: var(--content-basic-info);

    .tag__remove {
      color: var(--content-basic-info);
    }
  }

  &--purple {
    border-color: var(--border-basic-purple);
    background-color: var(--surface-accent-emphasis-low-purple);
    color: var(--content-basic-purple);

    .tag__remove {
      color: var(--content-basic-purple);
    }
  }

  &--black {
    border-color: var(--content-basic-primary);
    background-color: var(--surface-invert-primary);
    color: var(--content-invert-primary);

    .tag__remove {
      color: var(--content-invert-primary);
    }

    &.tag--outline {
      color: var(--content-basic-primary);

      .tag__remove {
        color: var(--content-basic-primary);
      }
    }
  }

  &--small {
    padding: 1px var(--spacing-1);
    height: 20px;
  }

  &--medium {
    padding: 1px var(--spacing-1);
    height: 24px;
  }

  &--large {
    padding: 5px var(--spacing-2);
    height: 32px;
  }

  &--xlarge {
    padding: 5px var(--spacing-3);
    height: 36px;
  }

  &--outline {
    border-width: 1px;
    border-style: solid;
    background-color: transparent;

    &.tag--medium {
      padding: 0 calc(var(--spacing-2) - 1px);
    }

    &.tag--large {
      padding: 4px calc(var(--spacing-3) - 1px);
    }

    &.tag--xlarge {
      padding: 4px calc(var(--spacing-4) - 1px);
    }

    .icon {
      background-color: transparent;
    }
  }

  &--text-white {
    color: var(--color-white);
  }

  &--text-black {
    color: var(--color-black);
  }

  &--with-node {
    &.tag--medium {
      padding-left: var(--spacing-1);
    }

    &.tag--large {
      padding-left: var(--spacing-2);
    }
  }

  &--dismissible {
    &.tag--medium {
      padding-right: var(--spacing-1);
    }

    &.tag--large {
      padding-right: var(--spacing-2);
    }
  }

  &__node {
    display: flex;
    align-items: center;
  }

  &__remove {
    display: flex;
    align-items: center;
    justify-content: center;
    outline: none;
    border-style: none;
    box-shadow: none;
    background-color: transparent;
    cursor: pointer;
    padding: 0 0 0 var(--spacing-1);
    color: var(--content-basic-secondary);
  }

  &__content {
    margin-right: var(--spacing-1);
    margin-left: var(--spacing-1);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

